force-app/main/default/objects/Sf_Org_Connection__c/Sf_Org_Connection__c.object-meta.xml
<CustomObject>
    <description>Stores an OAuth connection from the Connect With Salesforce Org agent to an external Salesforce org.</description>
    <label>Salesforce Org Connection</label>
    <nameField>
        <displayFormat>SFO-{000000}</displayFormat>
        <label>Connection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Org Connections</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>