force-app/main/default/objects/Sf_Org_Connection__c/fields/Access_Token_Enc__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Enc__c</fullName>
    <label>Access Token Encrypted</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>