force-app/main/default/objects/Sf_Org_Connection__c/fields/Code_Verifier__c.field-meta.xml
<CustomField>
    <fullName>Code_Verifier__c</fullName>
    <description>PKCE code verifier for this authorization attempt. Sent only to the target org token endpoint.</description>
    <label>Code Verifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>