force-app/main/default/objects/Sf_Org_Connection__c/fields/Connection_Key__c.field-meta.xml
<CustomField>
    <fullName>Connection_Key__c</fullName>
    <externalId>true</externalId>
    <label>Connection Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>