force-app/main/default/objects/Sf_Org_Connection__c/fields/Instance_Url__c.field-meta.xml
<CustomField>
    <fullName>Instance_Url__c</fullName>
    <label>Instance URL</label>
    <type>Url</type>
</CustomField>