force-app/main/default/objects/Sf_Org_Connection__c/fields/Is_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Is_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the authorized target organization reports IsSandbox=true.</description>
    <label>Is Sandbox</label>
    <type>Checkbox</type>
</CustomField>