force-app/main/default/objects/Sf_Org_Connection__c/fields/Login_Host__c.field-meta.xml
<CustomField>
    <fullName>Login_Host__c</fullName>
    <label>Login Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>