force-app/main/default/objects/Sf_Org_Connection__c/fields/Org_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_User_Name__c</fullName>
    <label>Org User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>