force-app/main/default/objects/Sf_Org_Connection__c/fields/Refresh_Token_Enc__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token_Enc__c</fullName>
    <label>Refresh Token Encrypted</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>