force-app/main/default/objects/Sf_Org_Connection__c/fields/Token_Issued_At__c.field-meta.xml
<CustomField>
    <fullName>Token_Issued_At__c</fullName>
    <label>Token Issued At</label>
    <type>DateTime</type>
</CustomField>